# ContextPacket

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  TODO.md  annotation_config.yml  config.toml  main.py  prd.md  pyproject.toml  requirements.txt  scores.jsonl  test_config.yml  test_small_config.yml
.github/workflows/: ci.yml
annotation_tool/: .sesskey  PLAN.md  README.md  WORKFLOW.md  annotations.json  app.py  chunks.jsonl.backup  evaluation.py  queries.py  update_chunks.py
context_packet/: __init__.py  chunker.py  cli.py  config.py  ingest.py  parser.py  scorer.py  writer.py
docs/: contextpacket_dev_plan.md  contextpacket_dev_plan_updated.md  contextpacket_milestones.md  mxbai.md  summarisation_pipeline_v3_prd.md
docs/archive/: persistance_v1.md  prd_v1.md
